improving background size and implementing starting function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
         <title>RETRO SPACE ONE</title>
     </head>
     <body>
-        <h1>RETRO SPACE ONE</h1>
+        <!-- <h1>RETRO SPACE ONE</h1> -->
+
+        <div class="container">
+            <button class="orange-ship"type="button">CHOOSE ORANGE</button>
+            <button class="green-ship"type="button">CHOOSE GREEN</button>
+            <button class="red-ship"type="button">CHOOSE RED</button>
+        </div>
         
         <!-- <script src="enemy-script"></script> -->
         <script src="./scripts/background.js"></script>
