--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         
         <!-- <script src="enemy-script"></script> -->
         <script src="./scripts/background.js"></script>
+        <script src="./scripts/enemy.js"></script>
         <script src="./scripts/player.js"></script>
         <script src="./scripts/game.js"></script>
         <script src="./scripts/main.js"></script>
