implement player dead animation, starting screen + menu, losingscreen

--- a/index.html
+++ b/index.html
@@ -10,9 +10,32 @@
         <title>RETRO SPACE ONE</title>
     </head>
     <body>
-        <!-- <h1>RETRO SPACE ONE</h1> -->
+        <div class="headline-container">
+            <h1 class="headline">RETRO SPACE</h1>
+            <h2 class="subline">ONE</h2>
+        </div>
         
-        <!-- <script src="enemy-script"></script> -->
+
+        <div class="start-btn-show">
+            <button type="button">START GAME</button>
+        </div>
+
+        <div class="choose-ship-container-hide">
+            <h2>CHOOSE YOUR SHIP CAPTAIN!</h2>
+        </div>
+
+        <div class="btn-container-hide">
+            <div class="btn-green"><button type="button">CHOOSE GREEN</button></div>
+            <div class="btn-red"><button type="button">CHOOSE RED</button></div>
+            <div class="btn-orange"><button type="button">CHOOSE ORANGE</button></div>
+        </div>
+
+        <div class="losingscreen-container-hide">
+            <h2>CAPTAINS SCORE</h2>
+            <h3 class="show-final-score"></h3>
+            <button class="btn-losingscreen" type="button">TRY AGAIN</button>
+        </div>
+
         <script src="./scripts/background.js"></script>
         <script src="./scripts/weapon.js"></script>
         <script src="./scripts/enemy.js"></script>
