finishing lobby menu

--- a/index.html
+++ b/index.html
@@ -22,14 +22,22 @@
 
         <div class="choose-ship-container-hide">
             <h2>CHOOSE YOUR SHIP CAPTAIN!</h2>
+            <h4>Choose wisely...</h4>
         </div>
 
-        <div class="btn-container-hide">
-            <div class="btn-green"><button type="button">CHOOSE GREEN</button></div>
-            <div class="btn-red"><button type="button">CHOOSE RED</button></div>
-            <div class="btn-orange"><button type="button">CHOOSE ORANGE</button></div>
+        <div class="container-hide">
+            <div class="btn-container-hide">
+                <div class="btn-green"><button type="button">CRUISER</button></div>
+                <div class="btn-red"><button type="button">BATTLESHIP</button></div>
+                <div class="btn-orange"><button type="button">DESTROYER</button></div>
+            </div>
+            <div class="ship-spec-align-hide">
+                <div class="ship-green-spec"><li>Health: | | | |</li><li>Speed: > > > > ></li><li>Weapon: Minigun</li></div>
+                <div class="ship-red-spec"><li>Health: | | | | | | |</li><li>Speed: > > ></li><li>Weapon: Railgun</li></div>
+                <div class="ship-orange-spec"><li>Health: | | | | |</li><li>Speed: > > > ></li><li>Weapon: Blaster</li></div>
+            </div>
         </div>
-
+        
         <div class="losingscreen-container-hide">
             <h2>CAPTAINS SCORE</h2>
             <h3 class="show-final-score"></h3>
