--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./style/style.css" />
         <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
-        <script src="path/to/p5.sound.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.sound.js" integrity="sha512-+UacraOiGydEqhxuA/Jr2dziKCJLnNbwtyKbw0rYdFriqf7JO4NtYNe4t7xm8Bx6LQ3W7+wZwePQhBFSYXlYaA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <title>RETRO SPACE ONE</title>
     </head>
     <body>
@@ -27,14 +26,14 @@
 
         <div class="container-hide">
             <div class="btn-container-hide">
-                <div class="btn-green"><button type="button">CRUISER</button></div>
+                <div class="btn-green"><button type="button">DESTROYER</button></div>
                 <div class="btn-red"><button type="button">BATTLESHIP</button></div>
-                <div class="btn-orange"><button type="button">DESTROYER</button></div>
+                <div class="btn-orange"><button type="button">DREADNOUGHT</button></div>
             </div>
             <div class="ship-spec-align-hide">
-                <div class="ship-green-spec"><li>Health: | | | |</li><li>Speed: > > > > ></li><li>Weapon: Minigun</li></div>
-                <div class="ship-red-spec"><li>Health: | | | | | | |</li><li>Speed: > > ></li><li>Weapon: Railgun</li></div>
-                <div class="ship-orange-spec"><li>Health: | | | | |</li><li>Speed: > > > ></li><li>Weapon: Blaster</li></div>
+                <div class="ship-green-spec"><li>Health:❤️❤️❤️</li><li>Speed:▶️▶️▶️▶️▶️</li><li>Weapon: Minigun</li></div>
+                <div class="ship-red-spec"><li>Health:❤️❤️❤️❤️❤️</li><li>Speed:▶️▶️▶️</li><li>Weapon: Railgun</li></div>
+                <div class="ship-orange-spec"><li>Health:❤️❤️❤️❤️</li><li>Speed:▶️▶️▶️▶️</li><li>Weapon: Blaster</li></div>
             </div>
         </div>
         
