getting ready for deployment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./style/style.css" />
+        <link rel="stylesheet" href="style/style.css" />
         <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.sound.js" integrity="sha512-+UacraOiGydEqhxuA/Jr2dziKCJLnNbwtyKbw0rYdFriqf7JO4NtYNe4t7xm8Bx6LQ3W7+wZwePQhBFSYXlYaA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <title>RETRO SPACE ONE</title>
@@ -43,11 +43,11 @@
             <button class="btn-losingscreen" type="button">TRY AGAIN</button>
         </div>
 
-        <script src="./scripts/background.js"></script>
-        <script src="./scripts/weapon.js"></script>
-        <script src="./scripts/enemy.js"></script>
-        <script src="./scripts/player.js"></script>
-        <script src="./scripts/game.js"></script>
-        <script src="./scripts/main.js"></script>
+        <script src="scripts/background.js"></script>
+        <script src="scripts/weapon.js"></script>
+        <script src="scripts/enemy.js"></script>
+        <script src="scripts/player.js"></script>
+        <script src="scripts/game.js"></script>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
