--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <button class="btn-losingscreen" type="button">TRY AGAIN</button>
         </div>
 
+        <script src="scripts/constants.js"></script>
         <script src="scripts/background.js"></script>
         <script src="scripts/weapon.js"></script>
         <script src="scripts/enemy.js"></script>
